auth/oauth-proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: auth
  name: oauth2-proxy
  labels:
    app: oauth2-proxy
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - args:
            - --provider=github
            - --email-domain=*
            - --github-user=mjm
            - --upstream=file:///dev/null
            - --http-address=0.0.0.0:4180
            - --cookie-secure=false
            - --cookie-domain=.homelab
            - --redirect-url=http://homebase.homelab/oauth2/callback
            - --set-xauthrequest
          image: quay.io/oauth2-proxy/oauth2-proxy@sha256:cf9c36686ae737ffcfe0f91e8ec60988695a0fa83748a96e079c3a0cf0a985fc
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              protocol: TCP
              name: http
