auth/oauth-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: auth
  name: oauth2-proxy
spec:
  rules:
    - host: homebase
      http:
        paths:
          - path: "/oauth2"
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  number: 80
